- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P0: Blocker
 - 
    6.11.0 FF
 - 
    None
 
- 
        
 - 
        6efd7d01a (dev), 1dfbb03b3 (6.10)
 
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp: In lambda function:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1143:96: error: no matching function for call to ‘QString::arg(QRhiTexture::Flags)’
 1143 |             return QString("Texture format: %1; flags: %2; samples: %3").arg(tex->format()).arg(tex->flags()).arg(tex->sampleCount());
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
                 from /home/qt/work/install/include/QtCore/qfloat16.h:10,
                 from /home/qt/work/install/include/QtCore/qdebug.h:15,
                 from /home/qt/work/install/include/QtCore/QDebug:1,
                 from /home/qt/work/qt/qt3d/src/core/nodes/qnodeid.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qnodeid.h:1,
                 from /home/qt/work/qt/qt3d/src/core/aspects/qabstractaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qabstractaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/render/frontend/qrenderaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DRender/qrenderaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer_p.h:19,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:5:
/home/qt/work/install/include/QtCore/qstring.h:362:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_integral<_Tp>, std::conjunction<std::is_enum<_Tp>, std::negation<q23::is_scoped_enum<E, is_enum_v<E> > > > >, std::negation<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> > > >, bool>::type <anonymous> > QString QString::arg(T, int, int, QChar) const’
  362 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:362:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:361:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  361 |     template <typename T, if_integral_non_char<T> = true>
      |                                                     ^~~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > QString QString::arg(T, int, char, int, QChar) const’
  377 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:376:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  376 |     template <typename T, if_floating_point<T> = true>
      |                                                  ^~~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> >::value, bool>::type <anonymous> > QString QString::arg(const T&, int, QChar) const’
  382 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:381:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  381 |     template <typename T, if_string_like<T> = true>
      |                                               ^~~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const’
  402 |     arg(Args &&...args) const
      |     ^~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const [with Args = \{QFlags<QRhiTexture::Flag>}]’:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1143:96:   required from here
/home/qt/work/install/include/QtCore/qstring.h:402:5: error: no type named ‘type’ in ‘struct std::enable_if<false, QString>’
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp: In lambda function:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1146:94: error: no matching function for call to ‘QString::arg(QRhiRenderBuffer::Flags)’
 1146 |             return QString("Buffer Type: %1; flags: %2; samples: %3").arg(buffer->type()).arg(buffer->flags()).arg(buffer->sampleCount());
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
                 from /home/qt/work/install/include/QtCore/qfloat16.h:10,
                 from /home/qt/work/install/include/QtCore/qdebug.h:15,
                 from /home/qt/work/install/include/QtCore/QDebug:1,
                 from /home/qt/work/qt/qt3d/src/core/nodes/qnodeid.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qnodeid.h:1,
                 from /home/qt/work/qt/qt3d/src/core/aspects/qabstractaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qabstractaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/render/frontend/qrenderaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DRender/qrenderaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer_p.h:19,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:5:
/home/qt/work/install/include/QtCore/qstring.h:362:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_integral<_Tp>, std::conjunction<std::is_enum<_Tp>, std::negation<q23::is_scoped_enum<E, is_enum_v<E> > > > >, std::negation<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> > > >, bool>::type <anonymous> > QString QString::arg(T, int, int, QChar) const’
  362 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:362:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:361:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  361 |     template <typename T, if_integral_non_char<T> = true>
      |                                                     ^~~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > QString QString::arg(T, int, char, int, QChar) const’
  377 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:376:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  376 |     template <typename T, if_floating_point<T> = true>
      |                                                  ^~~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> >::value, bool>::type <anonymous> > QString QString::arg(const T&, int, QChar) const’
  382 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:381:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  381 |     template <typename T, if_string_like<T> = true>
      |                                               ^~~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const’
  402 |     arg(Args &&...args) const
      |     ^~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const [with Args = \{QFlags<QRhiRenderBuffer::Flag>}]’:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1146:94:   required from here
/home/qt/work/install/include/QtCore/qstring.h:402:5: error: no type named ‘type’ in ‘struct std::enable_if<false, QString>’
Sccache command failed, re-try calling build tool directly
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp: In lambda function:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1143:96: error: no matching function for call to ‘QString::arg(QRhiTexture::Flags)’
 1143 |             return QString("Texture format: %1; flags: %2; samples: %3").arg(tex->format()).arg(tex->flags()).arg(tex->sampleCount());
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
                 from /home/qt/work/install/include/QtCore/qfloat16.h:10,
                 from /home/qt/work/install/include/QtCore/qdebug.h:15,
                 from /home/qt/work/install/include/QtCore/QDebug:1,
                 from /home/qt/work/qt/qt3d/src/core/nodes/qnodeid.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qnodeid.h:1,
                 from /home/qt/work/qt/qt3d/src/core/aspects/qabstractaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qabstractaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/render/frontend/qrenderaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DRender/qrenderaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer_p.h:19,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:5:
/home/qt/work/install/include/QtCore/qstring.h:362:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_integral<_Tp>, std::conjunction<std::is_enum<_Tp>, std::negation<q23::is_scoped_enum<E, is_enum_v<E> > > > >, std::negation<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> > > >, bool>::type <anonymous> > QString QString::arg(T, int, int, QChar) const’
  362 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:362:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:361:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  361 |     template <typename T, if_integral_non_char<T> = true>
      |                                                     ^~~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > QString QString::arg(T, int, char, int, QChar) const’
  377 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:376:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  376 |     template <typename T, if_floating_point<T> = true>
      |                                                  ^~~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> >::value, bool>::type <anonymous> > QString QString::arg(const T&, int, QChar) const’
  382 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:381:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  381 |     template <typename T, if_string_like<T> = true>
      |                                               ^~~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const’
  402 |     arg(Args &&...args) const
      |     ^~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const [with Args = \{QFlags<QRhiTexture::Flag>}]’:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1143:96:   required from here
/home/qt/work/install/include/QtCore/qstring.h:402:5: error: no type named ‘type’ in ‘struct std::enable_if<false, QString>’
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp: In lambda function:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1146:94: error: no matching function for call to ‘QString::arg(QRhiRenderBuffer::Flags)’
 1146 |             return QString("Buffer Type: %1; flags: %2; samples: %3").arg(buffer->type()).arg(buffer->flags()).arg(buffer->sampleCount());
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
                 from /home/qt/work/install/include/QtCore/qfloat16.h:10,
                 from /home/qt/work/install/include/QtCore/qdebug.h:15,
                 from /home/qt/work/install/include/QtCore/QDebug:1,
                 from /home/qt/work/qt/qt3d/src/core/nodes/qnodeid.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qnodeid.h:1,
                 from /home/qt/work/qt/qt3d/src/core/aspects/qabstractaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DCore/qabstractaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/render/frontend/qrenderaspect.h:8,
                 from /home/qt/work/qt/qt3d_build/include/Qt3DRender/qrenderaspect.h:1,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer_p.h:19,
                 from /home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:5:
/home/qt/work/install/include/QtCore/qstring.h:362:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_integral<_Tp>, std::conjunction<std::is_enum<_Tp>, std::negation<q23::is_scoped_enum<E, is_enum_v<E> > > > >, std::negation<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> > > >, bool>::type <anonymous> > QString QString::arg(T, int, int, QChar) const’
  362 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:362:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:361:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  361 |     template <typename T, if_integral_non_char<T> = true>
      |                                                     ^~~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cv<typename std::remove_reference<_Tp>::type>::type, qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > QString QString::arg(T, int, char, int, QChar) const’
  377 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:377:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:376:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  376 |     template <typename T, if_floating_point<T> = true>
      |                                                  ^~~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, QAnyStringView> >::value, bool>::type <anonymous> > QString QString::arg(const T&, int, QChar) const’
  382 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
      |                           ^~~
/home/qt/work/install/include/QtCore/qstring.h:382:27: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h:381:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
  381 |     template <typename T, if_string_like<T> = true>
      |                                               ^~~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const’
  402 |     arg(Args &&...args) const
      |     ^~~
/home/qt/work/install/include/QtCore/qstring.h:402:5: note:   template argument deduction/substitution failed:
/home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, QAnyStringView> >...>), QString>::type QString::arg(Args&& ...) const [with Args = \{QFlags<QRhiRenderBuffer::Flag>}]’:
/home/qt/work/qt/qt3d/src/plugins/renderers/rhi/renderer/renderer.cpp:1146:94:   required from here
/home/qt/work/install/include/QtCore/qstring.h:402:5: error: no type named ‘type’ in ‘struct std::enable_if<false, QString>’
ninja: build stopped: subcommand failed.
Process finished with error: exit status 1
Details: https://testresults.qt.io/coin/integration/qt/qt3d/tasks/1760052941
Tested changes (refs/builds/qtci/dev/1760024186):
https://codereview.qt-project.org/c/qt/qt3d/+/683371/2 Update dependencies on 'dev' in qt/qt3d
- blocks
 - 
                    
        
        QTQAINFRA-7299
        6.11 & dev
    
-         
 - In Review
 
 -         
 
- resulted from
 - 
                    
QTBUG-138471 QString::arg() convert floating type to integer
-         
 - Closed
 
 -