Renderer: compile fix after source incompatible change in qtbase

QString.arg() does not accept QFlags anymore. Converting to int
explicitly

Compare: 0a1c69bba5b5dd26b937ac0a67ab0bdd1c32b221

Fixes: QTBUG-141068
Change-Id: I07a737e17a15869860d227d91dff5d3a71389bd1
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 6efd7d01ae3ac76621a4d28f9ad638b12fa89786)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>